--- a/ruby_ex/bookinfo/list.erb
+++ b/ruby_ex/bookinfo/list.erb
@@ -9,7 +9,7 @@
 <% sth = dbh.execute("select * from bookinfos;") %>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="default.css">
     <title>蔵書管理</title>
 </head>
