--- a/1day_rails/sample/app/views/diaries/index.html.erb
+++ b/1day_rails/sample/app/views/diaries/index.html.erb
@@ -1,14 +1,27 @@
-<p style="color: green"><%= notice %></p>
+<h1>日記一覧画面</h1>
 
-<h1>Diaries</h1>
+<table>
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>タイトル</th>
+      <th>登録日時</th>
+      <th>更新日時</th>
+    </tr>
+  </thead>
 
-<div id="diaries">
-  <% @diaries.each do |diary| %>
-    <%= render diary %>
-    <p>
-      <%= link_to "Show this diary", diary %>
-    </p>
-  <% end %>
-</div>
+  <tbody>
+    <% @diaries.each do |diary| %>
+      <tr>
+        <td><%= diary.id %></td>
+        <td><%= diary.title %></td>
+        <td><%= diary.created_at %></td>
+        <td><%= diary.updated_at %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<%= link_to "New diary", new_diary_path %>
+<br>
+
+<%= link_to '日記を新規作成', new_diary_path%>
