--- a/1day_rails/health_observation/app/views/healths/submit.html.erb
+++ b/1day_rails/health_observation/app/views/healths/submit.html.erb
@@ -1,16 +1,20 @@
 <h1>健康観察アプリ</h1>
 
-<table>
-    <tr>
-        <td>学年(選択必須)</td><td></td>
-    </tr>
-    <tr>
-        <td>組(選択必須)</td><td></td>
-    </tr>
-    <tr>
-        <td>出席番号(選択必須)</td><td></td>
-    </tr>
-    <tr>
-        <td>氏名(入力必須)</td><td></td>
-    </tr>
-</table>
+<%= form_with(model: health, local: true) do |form| %>
+    <table>
+        <tr>
+            <td>学年(選択必須)</td><td><%= form.select :year, [["1年",1], ["2年",2], ["3年",3]],{include_blank: '選択してください'} %></td>
+        </tr>
+        <tr>
+            <td>組(選択必須)</td><td><%= form.select :class, [["A組",A], ["B組",B], ["C組",C],["D組",D], ["E組",E], ["F組",F],["G組",G], ["H組",H], ["I組",I]],{include_blank: '選択してください'} %></td>
+        </tr>
+        <tr>
+            <td>出席番号(選択必須)</td><td><%= form.select :class, [["1番",1], ["2番",2], ["3番",3],["4番",4], ["5番",5], ["6番",6],["7番",7], ["8番",8], ["9番",9],["10番",10],
+                                                                    ["11番",11], ["12番",12], ["13番",13],["14番",14], ["15番",15], ["16番",16],["17番",17], ["18番",18], ["19番",19],["20番",20],
+                                                                    ["21番",21], ["22番",22], ["23番",23],["24番",24], ["25番",25], ["26番",26],["27番",27], ["28番",28], ["29番",29],["30番",30],
+                                                                    ["31番",31], ["32番",32], ["33番",33],["34番",34], ["35番",35], ["36番",36],["37番",37], ["38番",38], ["39番",39],["40番",40],],{include_blank: '選択してください'} %></td>
+        </tr>
+        <tr>
+            <td>氏名(入力必須)</td><td><%= form.select :name, {include_blank: '入力して下さい'} %></td></td>
+        </tr>
+    </table>
