--- a/1day_rails/health_observation/app/views/healths/show.html.erb
+++ b/1day_rails/health_observation/app/views/healths/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Healths#show</h1>
-<p>Find me in app/views/healths/show.html.erb</p>
+<h1>検索条件(全体検索)</h1>
+<%= link_to "ホーム画面に戻る", "/healths" %>|<%= link_to "本日分の送信を行う", "/healths/new" %>
