--- a/1day_rails/health_observation/app/views/healths/show.html.erb
+++ b/1day_rails/health_observation/app/views/healths/show.html.erb
@@ -1,27 +1,28 @@
 <h1>検索条件(全体検索)</h1>
 <%= link_to "ホーム画面に戻る", "/healths" %>|<%= link_to "本日分の送信を行う", "/healths/new" %>
+<br>
 <% # 検索フォームの作成 %>
-<%= search_form_for(@q, url: "/healths/show",local:true) do |f|%>
+<%= search_form_for @q,url: "/healths/show", local: true do |f| %>
 <table>
         <tr>
-            <td><%= f.label :year_eq, "学年" %></td><td><%= form.select :year_eq, [["1年",1], ["2年",2], ["3年",3]],{include_blank: '選択してください'} %></td>
+            <td><%= f.label :year_eq, "学年" %></td><td><%= f.select :year_eq, [["1年",1], ["2年",2], ["3年",3]], include_blank:"選択してください。" %></td>
         </tr>
         <tr>
-            <td><%= f.label :school_class_eq, "組" %></td><td><%= form.select :school_class_eq, [["A組",1], ["B組",2], ["C組",3],["D組",4], ["E組",5], ["F組",6],["G組",7], ["H組",8], ["I組",9]],{include_blank: '選択してください'} %></td>
+            <td><%= f.label :school_class_eq, "組" %></td><td><%= f.select :school_class_eq, [["A組",1], ["B組",2], ["C組",3],["D組",4], ["E組",5], ["F組",6],["G組",7], ["H組",8], ["I組",9]],{include_blank: '選択してください'} %></td>
         </tr>
         <tr>
-            <td><%= f.label :created_at_cont, "日付" %></td><td><%= form.text_field :created_at_cont, {include_blank: '入力して下さい'} %></td></td>
-        </tr>
-        <tr>
-            <td><%= form.radio_button :commute_eq, 1 %><%= form.label :commute_eq, "登校", value: 1%></td>
-            <td><%= form.radio_button :commute_eq, 2 %><%= form.label :commute_eq, "遅刻", value: 2%></td>
-            <td><%= form.radio_button :commute_eq, 3 %><%= form.label :commute_eq, "欠席", value: 3%></td>
+            <td><%= f.label :created_at_cont, "日付" %></td><td><%= f.text_field :created_at_cont, {include_blank: '入力して下さい'} %></td>
         </tr>
 </table>
+<%= f.radio_button :commute_eq, 1 %><%= f.label :commute_eq, "登校", value: 1%>
+<%= f.radio_button :commute_eq, 2 %><%= f.label :commute_eq, "遅刻", value: 2%>
+<%= f.radio_button :commute_eq, 3 %><%= f.label :commute_eq, "欠席", value: 3%>
 <br>
 <%= f.submit "検索" %>
+<% end %>
 <hr>
 <br>
+<h2>検索結果</h2>
 <table>
     <tr>
         <th><%= sort_link(@q, :year, "学年") %></th>
@@ -33,16 +34,24 @@
         <th><%= sort_link(@q, :temperature, "体温") %></th>
         <th><%= sort_link(@q, :etc, "その他") %></th>
     </tr>
-    <% @health.each do |health| %>
+    <% if @result.present? %>
+    <% @result.each do |result| %>
     <tr>
-        <td><%= health.year%></td>
-        <td><%= health.school_class%></td>
-        <td><%= health.class_number%></td>
-        <td><%= health.name%></td>
-        <td><%= health.created_at%></td>
-        <td><%= health.commute%></td>
-        <td><%= health.temperature%></td>
-        <td><%= health.etc%></td>
+        <td><%= result.year%></td>
+        <td><%= result.school_class%></td>
+        <td><%= result.class_number%></td>
+        <td><%= result.name%></td>
+        <td><%= result.created_at%></td>
+        <td><%= result.commute%></td>
+        <td><%= result.temperature%></td>
+        <td><%= result.etc%></td>
     </tr>
+    <% end %>
 </table>
+<% else %>
+    <table>
+        <tr>
+            <td>検索結果はありません</td>
+        </tr>
+    </table>
 <% end %>
