--- a/1day_rails/health_observation/app/views/healths/index.html.erb
+++ b/1day_rails/health_observation/app/views/healths/index.html.erb
@@ -1,3 +1,64 @@
-<h1>健康観察アプリ</h1>
-<%= link_to "本日分の送信を行う", new_health_path %>
-<%= link_to "検索を行う", "healths/show" %>
+<h1>検索条件(個別検索)</h1>
+<% require "date" %>
+<%= link_to "ホーム画面に戻る", "/healths" %>|<%= link_to "データ送信を行う", "/healths/new" %>|<%= link_to "全体検索を行う", "/healths/show" %>
+<br>
+<% # 検索フォームの作成 %>
+<%= search_form_for @q,url: "/healths/show", local: true do |f| %>
+<table>
+        <tr>
+            <td><%= f.label :year_eq, "学年" %></td><td><%= f.select :year_eq, [["1年","1年"], ["2年","2年"], ["3年","3年"]], include_blank:"選択してください。" %></td>
+        </tr>
+        <tr>
+            <td><%= f.label :school_class_eq, "組" %></td><td><%= f.select :school_class_eq, [["A組","A組"], ["B組","B組"], ["C組","C組"],["D組","D組"], ["E組","E組"], ["F組","F組"],["G組","G組"], ["H組","H組"], ["I組",9]],{include_blank: '選択してください'} %></td>
+        </tr>
+        <tr>
+            <td><%= f.label :class_number_eq, "出席番号" %></td><td><%= f.select :class_number_eq, [["1番",1], ["2番",2], ["3番",3],["4番",4], ["5番",5], ["6番",6],["7番",7], ["8番",8], ["9番",9],["10番",10],
+                                                                    ["11番",11], ["12番",12], ["13番",13],["14番",14], ["15番",15], ["16番",16],["17番",17], ["18番",18], ["19番",19],["20番",20],
+                                                                    ["21番",21], ["22番",22], ["23番",23],["24番",24], ["25番",25], ["26番",26],["27番",27], ["28番",28], ["29番",29],["30番",30],
+                                                                    ["31番",31], ["32番",32], ["33番",33],["34番",34], ["35番",35], ["36番",36],["37番",37], ["38番",38], ["39番",39],["40番",40],],{include_blank: '入力して下さい'} %></td>
+        </tr>
+        <tr>
+            <td><%= f.label :save_time_cont, "日付" %></td><td><%= f.text_field :save_time_cont, value: "2023-03-05" %></td>
+        </tr>
+</table>
+<%= f.radio_button :commute_eq, "登校" %><%= f.label :commute_eq, "登校", value: "登校"%>
+<%= f.radio_button :commute_eq, "遅刻" %><%= f.label :commute_eq, "遅刻", value: "遅刻"%>
+<%= f.radio_button :commute_eq, "欠席" %><%= f.label :commute_eq, "欠席", value: "欠席"%>
+<br>
+<%= f.submit "検索" %>
+<% end %>
+<hr>
+<br>
+<h2>検索結果(個別)</h2>
+<table>
+    <tr>
+        <th><%= sort_link(@q, :year, "学年") %></th>
+        <th><%= sort_link(@q, :school_class, "組") %></th>
+        <th><%= sort_link(@q, :class_number, "出席番号",default_order: :asc) %></th>
+        <th><%= sort_link(@q, :name, "名前") %></th>
+        <th><%= sort_link(@q, :save_time, "送信日時") %></th>
+        <th><%= sort_link(@q, :commute, "出席") %></th>
+        <th><%= sort_link(@q, :temperature, "体温") %></th>
+        <th><%= sort_link(@q, :etc, "その他") %></th>
+    </tr>
+    <% if @results.present? %>
+    <% @results.each do |result| %>
+    <tr>
+        <td><%= result.year%></td>
+        <td><%= result.school_class%></td>
+        <td><%= result.class_number%></td>
+        <td><%= result.name%></td>
+        <td><%= result.save_time%></td>
+        <td><%= result.commute%></td>
+        <td><%= result.temperature%></td>
+        <td><%= result.etc%></td>
+    </tr>
+    <% end %>
+</table>
+<% else %>
+    <table>
+        <tr>
+            <td>検索結果はありません</td>
+        </tr>
+    </table>
+<% end %>
