--- a/1day_rails/health_observation/app/views/healths/new.html.erb
+++ b/1day_rails/health_observation/app/views/healths/new.html.erb
@@ -1,16 +1,9 @@
 <h1>健康観察アプリ</h1>
 <% require "date" %>
 <%= link_to "ホーム画面に戻る", "/healths" %>|<%= link_to "全体検索を行う", "/healths/show" %>|<%= link_to "個別検索を行う", "/healths/index"%>
-<% #エラーメッセージの表示 %>
-<% if @health.errors.any? %>
-    <ul>
-        <% @health.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-        <% end %>
-    </ul>
-<% end %>
 <% # コントローラーで生成されたインスタンスメソッド@healthにデータを付与 %>
-<%= form_with(model: @health, local: true) do |form| %>
+<%= form_with model: @health, local: true do |form| %>   
+    <%= render "shared/error_messages", model: form.object%> 
     <table>
         <tr>
             <td>学年(選択必須)</td><td><%= form.select :year, [["1年","1年"], ["2年","2年"], ["3年","3年"]],{include_blank: '選択してください'} %></td>
@@ -41,5 +34,5 @@
             <td>その他</td><td><%= form.text_area :etc %></td>
         </tr>
     </table>
-    <%= form.submit %>
+    <%= form.submit value: "提出"%>
 <% end %>
