--- a/1day_rails/health_observation/app/views/healths/index.html.erb
+++ b/1day_rails/health_observation/app/views/healths/index.html.erb
@@ -30,28 +30,28 @@
 <hr>
 <br>
 <h2>検索結果(個別)</h2>
-<table>
+<table class="table">
     <tr>
-        <th><%= sort_link(@q, :year, "学年") %></th>
-        <th><%= sort_link(@q, :school_class, "組") %></th>
-        <th><%= sort_link(@q, :class_number, "出席番号",default_order: :asc) %></th>
-        <th><%= sort_link(@q, :name, "名前") %></th>
-        <th><%= sort_link(@q, :save_time, "送信日時") %></th>
-        <th><%= sort_link(@q, :commute, "出席") %></th>
-        <th><%= sort_link(@q, :temperature, "体温") %></th>
-        <th><%= sort_link(@q, :etc, "その他") %></th>
+        <th class="th"><%= sort_link(@q, :year, "学年") %></th>
+        <th class="th"><%= sort_link(@q, :school_class, "組") %></th>
+        <th class="th"><%= sort_link(@q, :class_number, "出席番号",default_order: :asc) %></th>
+        <th class="th"><%= sort_link(@q, :name, "名前") %></th>
+        <th class="th"><%= sort_link(@q, :save_time, "送信日時") %></th>
+        <th class="th"><%= sort_link(@q, :commute, "出席") %></th>
+        <th class="th"><%= sort_link(@q, :temperature, "体温") %></th>
+        <th class="th"><%= sort_link(@q, :etc, "その他") %></th>
     </tr>
     <% if @results.present? %>
     <% @results.each do |result| %>
     <tr>
-        <td><%= result.year%></td>
-        <td><%= result.school_class%></td>
-        <td><%= result.class_number%></td>
-        <td><%= result.name%></td>
-        <td><%= result.save_time%></td>
-        <td><%= result.commute%></td>
-        <td><%= result.temperature%></td>
-        <td><%= result.etc%></td>
+        <td class="td"><%= result.year%></td>
+        <td class="td"><%= result.school_class%></td>
+        <td class="td"><%= result.class_number%></td>
+        <td class="td"><%= result.name%></td>
+        <td class="td"><%= result.save_time%></td>
+        <td class="td"><%= result.commute%></td>
+        <td class="td"><%= result.temperature%></td>
+        <td class="td"><%= result.etc%></td>
     </tr>
     <% end %>
 </table>
