--- a/1day_rails/health_observation/app/views/healths/new.html.erb
+++ b/1day_rails/health_observation/app/views/healths/new.html.erb
@@ -33,5 +33,5 @@
             <td>その他</td><td><%= form.text_area :etc %></td>
         </tr>
     </table>
-    <%= form.submit value: "提出"%>
+    <%= form.submit value: "提出", class: "btn-square-emboss" %>
 <% end %>
