--- a/1day_rails/health_observation/app/assets/stylesheets/shared.css
+++ b/1day_rails/health_observation/app/assets/stylesheets/shared.css
@@ -1,12 +1,37 @@
 .table, .td, .th{
   border: 2px #aaa solid;
 }
+
 .table{
   border-collapse: collapse;
 }
+
 .td, .th{
   padding: 5px;
 }
+
 .th{
   background: #ccc;
+}
+
+.field_with_errors{
+  display: contents;
+}
+
+.btn-square-emboss {
+  position: relative;
+  display: inline-block;
+  padding: 0.25em 0.5em;
+  text-decoration: none;
+  color: #FFF;
+  background: #fd9535;/*色*/
+  border-radius: 4px;/*角の丸み*/
+  box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(0, 0, 0, 0.05);
+  font-weight: bold;
+  border: solid 2px #d27d00;/*線色*/
+}
+
+.btn-square-emboss:active {
+  /*押したとき*/
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
 }
