--- a/1day_rails/health_observation/app/views/healths/index.html.erb
+++ b/1day_rails/health_observation/app/views/healths/index.html.erb
@@ -25,7 +25,9 @@
 <%= f.radio_button :commute_eq, "遅刻" %><%= f.label :commute_eq, "遅刻", value: "遅刻"%>
 <%= f.radio_button :commute_eq, "欠席" %><%= f.label :commute_eq, "欠席", value: "欠席"%>
 <br>
-<%= f.submit "検索", class: class: "btn-square-emboss"%>
+<div class="btn-center">
+<%= f.submit "検索", class: "btn-square-emboss"%>
+</div>
 <% end %>
 <hr>
 <br>
