--- a/1day_rails/health_observation/app/views/healths/new.html.erb
+++ b/1day_rails/health_observation/app/views/healths/new.html.erb
@@ -4,34 +4,48 @@
 <% # コントローラーで生成されたインスタンスメソッド@healthにデータを付与 %>
 <%= form_with model: @health, local: true do |form| %>   
     <%= render "shared/error_messages"%> 
-    <table>
+    <div class="box_con02">
+    <table class="formTable">
         <tr>
-            <td>学年(選択必須)</td><td><%= form.select :year, [["1年","1年"], ["2年","2年"], ["3年","3年"]],{include_blank: '選択してください'} %></td>
+            <th>学年<span>必須</span></th>
+            <td><div class="wide"><%= form.select :year, [["1年","1年"], ["2年","2年"], ["3年","3年"]],{include_blank: '選択してください'} %></div></td>
         </tr>
         <tr>
-            <td>組(選択必須)</td><td><%= form.select :school_class, [["A組","A組"], ["B組","B組"], ["C組","C組"],["D組","D組"], ["E組","E組"], ["F組","F組"],["G組","G組"], ["H組","H組"], ["I組","I組"]],{include_blank: '選択してください'} %></td>
+            <th>組<span>必須</span></th>
+            <td><div class="wide"><%= form.select :school_class, [["A組","A組"], ["B組","B組"], ["C組","C組"],["D組","D組"], ["E組","E組"], ["F組","F組"],["G組","G組"], ["H組","H組"], ["I組","I組"]],{include_blank: '選択してください'} %></div></td>
         </tr>
         <tr>
-            <td>出席番号(選択必須)</td><td><%= form.select :class_number, [["1番",1], ["2番",2], ["3番",3],["4番",4], ["5番",5], ["6番",6],["7番",7], ["8番",8], ["9番",9],["10番",10],
+            <th>出席番号<span>必須</span></th><td><div class="wide"><%= form.select :class_number, [["1番",1], ["2番",2], ["3番",3],["4番",4], ["5番",5], ["6番",6],["7番",7], ["8番",8], ["9番",9],["10番",10],
                                                                     ["11番",11], ["12番",12], ["13番",13],["14番",14], ["15番",15], ["16番",16],["17番",17], ["18番",18], ["19番",19],["20番",20],
                                                                     ["21番",21], ["22番",22], ["23番",23],["24番",24], ["25番",25], ["26番",26],["27番",27], ["28番",28], ["29番",29],["30番",30],
-                                                                    ["31番",31], ["32番",32], ["33番",33],["34番",34], ["35番",35], ["36番",36],["37番",37], ["38番",38], ["39番",39],["40番",40],],{include_blank: '選択してください'} %></td>
+                                                                    ["31番",31], ["32番",32], ["33番",33],["34番",34], ["35番",35], ["36番",36],["37番",37], ["38番",38], ["39番",39],["40番",40],],{include_blank: '選択してください'} %></div></td>
         </tr>
         <tr>
-            <td>氏名(入力必須)</td><td><%= form.text_field :name, {include_blank: '入力して下さい'} %></td></td>
+            <th>氏名<span>必須</span></th><td><div class="wide"><%= form.text_field :name, {include_blank: '入力して下さい'} %></div></td>
         </tr>
-    </table>
-    <hr>
+        <tr>
+            <th>登校の確認</th>
+            <td>
+            <div class="box_br">
             <%= form.radio_button :commute, "登校" %><%= form.label :commute, "登校", value: "登校"%>
+            </div>
+            <div class="box_br">
             <%= form.radio_button :commute, "遅刻" %><%= form.label :commute, "遅刻", value: "遅刻"%>
+            </div>
+            <div class="box_br">
             <%= form.radio_button :commute, "欠席" %><%= form.label :commute, "欠席", value: "欠席"%>
-    <table>
-        <tr>
-            <td>測定した体温(半角)</td><td><%= form.text_field :temperature %>度</td>
+            </div>
+            </td>
         </tr>
         <tr>
-            <td>その他</td><td><%= form.text_area :etc %></td>
+            <th>測定した体温<span>半角入力必須</span></th><td><div class="wide"><%= form.text_field :temperature %>度</div></td>
+        </tr>
+        <tr>
+            <th>その他</th><td><%= form.text_area :etc, cols: "50", rows: "5" %></td>
         </tr>
     </table>
-    <%= form.submit value: "提出", class: "btn-square-emboss" %>
+    </div>
+    <div class="btn-center">
+    <%= form.submit value: "上記の内容で提出する", class: "btn-square-emboss" %>
+    </div>
 <% end %>
