--- a/1day_rails/health_observation/app/views/healths/index.html.erb
+++ b/1day_rails/health_observation/app/views/healths/index.html.erb
@@ -16,7 +16,7 @@
             <th><%= f.label :class_number_eq, "出席番号" %></th><td><div class="wide"><%= f.select :class_number_eq, [["1番",1], ["2番",2], ["3番",3],["4番",4], ["5番",5], ["6番",6],["7番",7], ["8番",8], ["9番",9],["10番",10],
                                                                     ["11番",11], ["12番",12], ["13番",13],["14番",14], ["15番",15], ["16番",16],["17番",17], ["18番",18], ["19番",19],["20番",20],
                                                                     ["21番",21], ["22番",22], ["23番",23],["24番",24], ["25番",25], ["26番",26],["27番",27], ["28番",28], ["29番",29],["30番",30],
-                                                                    ["31番",31], ["32番",32], ["33番",33],["34番",34], ["35番",35], ["36番",36],["37番",37], ["38番",38], ["39番",39],["40番",40],],{include_blank: '入力して下さい'} %></div></td>
+                                                                    ["31番",31], ["32番",32], ["33番",33],["34番",34], ["35番",35], ["36番",36],["37番",37], ["38番",38], ["39番",39],["40番",40],],{include_blank: '選択して下さい'} %></div></td>
         </tr>
         <tr>
             <th><%= f.label :save_time_cont, "日付" %><span>yyyy-mm-dd形式</span></th><td><%= f.text_field :save_time_cont, {:size=>"70",value: "#{Date.today.strftime("%Y-%m-%d")}"} %></td>
